// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`growth reducer handles GROWTH_SEEN_GLOBAL_INTRO when not seen 1`] = `
Object {
  "hasSeenGlobalIntro": false,
}
`;

exports[`growth reducer handles GROWTH_SEEN_GLOBAL_INTRO when seen 1`] = `
Object {
  "hasSeenGlobalIntro": true,
}
`;

exports[`growth reducer has an initial state 1`] = `
Object {
  "hasSeenGlobalIntro": false,
}
`;
